@@ -28,6 +28,10 @@
 #include <grub/video.h>
 #include <grub/video_fb.h>
 
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 struct grub_test
 {
   /* The next test.  */
@@ -107,5 +111,9 @@ grub_video_checksum_get_modename (void);
 
 #define GRUB_TEST_VIDEO_SMALL_N_MODES 6
 extern struct grub_video_mode_info grub_test_video_modes[30];
+
+#ifdef __cplusplus
+}
+#endif
 
 #endif /* ! GRUB_TEST_HEADER */
